--- a/ncat/configure.ac
+++ b/ncat/configure.ac
@@ -97,7 +97,8 @@ if test "$use_openssl" = "yes" -a -z "$specialssldir" ; then
 	   [ use_openssl="yes"],
 	   [ use_openssl="no"
 	   AC_MSG_WARN([Failed to find libssl so OpenSSL will not be used. 
-If it is installed you can try the --with-openssl=DIR argument]) ])
+If it is installed you can try the --with-openssl=DIR argument]) ],
+     [ -lcrypto ])
 	fi
 fi
 
