Change the README file name to README.md
In order to properly make in macosx/, specifics files are copied into
the final .DMG, so I had to correct the name of the file.

--- a/macosx/Makefile
+++ b/macosx/Makefile
@@ -40,7 +40,7 @@ PREFIX = /usr/local
 
 PACKAGEMAKER = /Developer/usr/bin/packagemaker
 
-EXTRA_DIST = README ../COPYING ../docs/3rd-party-licenses.txt ../docs/licenses
+EXTRA_DIST = README.md ../COPYING ../docs/3rd-party-licenses.txt ../docs/licenses
 
 CONFIGURE_ARGS = --prefix="$(PREFIX)" --with-libdnet=included --with-libpcap=included --with-libpcre=included --with-liblua=included CC="$(CC)" CXX="$(CXX)" CFLAGS="$(CFLAGS)" CXXFLAGS="$(CXXFLAGS)" LDFLAGS="$(LDFLAGS)" PYTHON="$(PYTHON)"
 
