Separate CFLAGS from CXXFLAGS. Was breaking with -std=c++11 on clang

--- a/Makefile.in
+++ b/Makefile.in
@@ -47,8 +47,7 @@ DEFS += -D_FORTIFY_SOURCE=2
 # DEFS += -DMTRACE=1
 CXXFLAGS = @CXXFLAGS@ $(DBGFLAGS) $(CCOPT)
 CPPFLAGS = @CPPFLAGS@ $(DEFS)
-export CFLAGS = $(CXXFLAGS)
-# CFLAGS = $(DEFS) $(INCLS)
+CFLAGS = @CFLAGS@ $(DBGFLAGS) $(CCOPT)
 STATIC =
 LDFLAGS = @LDFLAGS@ $(DBGFLAGS) $(STATIC)
 LIBS =  @LIBNSOCK_LIBS@ @LIBNBASE_LIBS@ @LIBPCRE_LIBS@ @LIBPCAP_LIBS@ $(OPENSSL_LIBS) libnetutil/libnetutil.a @LIBDNET_LIBS@ @LIBLUA_LIBS@ @LIBLINEAR_LIBS@ @LIBS@
