Reorder checks and libs to fix building when OpenSSL requires -ldl

--- a/nsock/tests/Makefile.in
+++ b/nsock/tests/Makefile.in
@@ -11,7 +11,7 @@ CC 	= @CC@
 CPPFLAGS = @CPPFLAGS@ -I../include
 CFLAGS	= @CFLAGS@
 LDFLAGS	= @LDFLAGS@
-LIBS	= @OPENSSL_LIBS@ @LIBPCAP_LIBS@
+LIBS	= @OPENSSL_LIBS@ @LIBPCAP_LIBS@ @LIBS@
 
 SRC = tests_main.c \
       basic.c \
