--- a/nmap.spec.in
+++ b/nmap.spec.in
@@ -61,7 +61,7 @@ both console and graphical versions are available.
 
 %build
 
-%configure --with-openssl=%{openssl} --without-zenmap --with-ndiff --with-nmap-update --with-libdnet=included --with-libpcap=included --with-libpcre=included --with-liblua=included
+%configure --with-openssl=%{openssl} --without-zenmap --with-ndiff --with-nmap-update --with-libdnet=included --with-libpcap=included --with-libpcre=included --with-liblua=included --with-libz=included
 %if "%{buildncat}" == "0"
 %configure --without-ncat
 %endif
