Fix 'installation' during build of libssh2

--- a/Makefile.in
+++ b/Makefile.in
@@ -141,7 +141,7 @@ build-pcap: $(LIBPCAPDIR)/Makefile
 
 build-libssh2: $(LIBSSH2DIR)/src/Makefile
 	@echo Compiling libssh2; cd $(LIBSSH2DIR)/src && $(MAKE);
-	cd $(LIBSSH2DIR)/src && $(MAKE) prefix="" DESTDIR=$(NDIR)/$(LIBSSH2DIR) install-libLTLIBRARIES;
+	cd $(LIBSSH2DIR)/src && $(MAKE) libdir="/lib" prefix="" DESTDIR=$(NDIR)/$(LIBSSH2DIR) install-libLTLIBRARIES;
 
 build-zlib: $(ZLIBDIR)/Makefile
 	@echo Compiling zlib; cd $(ZLIBDIR) && $(MAKE);
