--- a/mswin32/nmap.vcxproj
+++ b/mswin32/nmap.vcxproj
@@ -166,6 +166,7 @@ xcopy /y /d  "$(ProjectDir)..\libssh2\win32\$(Configuration)_dll\*.dll" "$(Proje
     <ClCompile Include="..\nse_openssl.cc" />
     <ClCompile Include="..\nse_pcrelib.cc" />
     <ClCompile Include="..\nse_ssl_cert.cc" />
+    <ClCompile Include="..\nse_zlib.cc" />
     <ClCompile Include="..\osscan.cc" />
     <ClCompile Include="..\osscan2.cc" />
     <ClCompile Include="..\output.cc" />
@@ -221,6 +222,7 @@ xcopy /y /d  "$(ProjectDir)..\libssh2\win32\$(Configuration)_dll\*.dll" "$(Proje
     <ClInclude Include="..\nse_openssl.h" />
     <ClInclude Include="..\nse_pcrelib.h" />
     <ClInclude Include="..\nse_ssl_cert.h" />
+    <ClInclude Include="..\nse_zlib.h" />
     <ClInclude Include="..\osscan.h" />
     <ClInclude Include="..\osscan2.h" />
     <ClInclude Include="..\output.h" />
