Call pcap_set_immediate_mode to get results back immediately.

--- a/nmap_config.h.in
+++ b/nmap_config.h.in
@@ -255,5 +255,6 @@ extern "C" int gethostname (char *, unsigned int);
 
 #undef HAVE_IPV6_IPPROTO_RAW
 #undef PCAP_NETMASK_UNKNOWN
+#undef HAVE_PCAP_SET_IMMEDIATE_MODE
 
 #endif /* CONFIG_H */
