Similar improvements to finding Lua for Ncat

--- a/ncat/config.h.in
+++ b/ncat/config.h.in
@@ -154,3 +154,10 @@
 
 /* Define to rpl_realloc if the replacement function should be used. */
 #undef realloc
+
+/* Defines for locating Lua */
+#undef LUA_INCLUDED
+#undef HAVE_LUA5_3_LUA_H
+#undef HAVE_LUA_5_3_LUA_H
+#undef HAVE_LUA_H
+#undef HAVE_LUA_LUA_H
